<resources>
    <string name="app_name">basics1</string>
    <string name="txt_title_app">Abduzcan 1.0</string>
    <string name="txt_name_author">Igutisan</string>
    <string name="txt_info">La aventura esta por inciar, \npor favor inicia sesion</string>
    <string name="txt_login">Ingresar</string>
    <string name="txt_recover_password">Recuperar Contraseña</string>
    <string name="txt_login_with_google">Ingresar con Google</string>
    <string name="txt_not_have_account">No tienes cuenta?</string>
    <string name="txt_register">Registrate</string>
    <string name="txt_description">Inicie una nueva aventura con \nAbzduzcan y descubre una \nneuva forma de ver el mundo</string>
    <string name="txt_start">Comienza</string>
    <string name="termsAndConditions">Acepto los Términos y Condiciones</string>
    <string name="login_redirect_text">Ya tienes cuenta? Inicia Sesion</string>
    <string name="instruction_create_account">Crea tu cuenta para continuar</string>
    <string name="hint_names">Nombres</string>
    <string name="hint_last_names">Apellidos</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_repeat_password">Repetir Contraseña</string>
    <string name="login_question">¿Ya tienes una cuenta? </string>
    <string name="redirect_to_login">Iniciar Sesión </string>
    <string name="profile_image_description">Imagen de perfil del usuario</string>
    <string name="profile_full_name_placeholder">Nombres Apellidos</string>
    <string name="profile_email_placeholder">correo.electronico@ejemplo.com</string>
    <string name="profile_phone_placeholder">+57 3111111111</string>
    <string name="action_edit">Editar</string>
    <string name="instruction_recover_password">Ingresa tu correo electrónico</string>
    <string name="action_send">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MyProfileStr">Mi perfil</string>
    <string name="SettingsStr">Configuraciones</string>
    <string name="logoutStr">Cerrar sesion</string>
</resources>