<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_app"
            android:layout_width="126dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@mipmap/ic_launcher3_round" />

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/txt_title_app"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="serif"
            android:text="@string/txt_info"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="43dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/personita" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="210dp"
                android:layout_height="44dp"
                android:background="@drawable/rounded_border"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="39dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/llave" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="210dp"
                android:layout_height="44dp"
                android:background="@drawable/rounded_border"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/txt_login"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:strokeColor="@color/blue" />

        <TextView
            android:id="@+id/txt_resetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="serif"
            android:text="@string/txt_recover_password"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google"
            android:layout_width="293dp"
            android:layout_height="53dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/txt_login_with_google"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconSize="24dp"
            app:iconTint="@null" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="56dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txt_notHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/txt_not_have_account" />

            <TextView
                android:id="@+id/txt_register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/txt_register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>